evaluation/rq1/sota/mythril/execution_logs/0x0xa2################################b0fea_eth.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xa2################################b0fea_eth/PToken.sol:528:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.5.5;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.5"

